Update to 26.1-pre-1 (many bugs are still present)